--- a/Frontend/src/GameStore.Frontend/appsettings.json
+++ b/Frontend/src/GameStore.Frontend/appsettings.json
@@ -7,14 +7,15 @@
       "Microsoft.AspNetCore.Authorization": "Information"
     }
   },
-  "BackendApiUrl": "<YOUR API BASE URL HERE>",
+  "BackendApiUrl": "http://localhost:5082",
   "AllowedHosts": "*",
   "IdentityProvider": "Keycloak",
   "Authentication": {
     "Schemes": {
       "Keycloak": {
         "ClientId": "gamestore-frontend",
-        "Authority": "http://localhost:8080/realms/gamestore"
+        "Authority": "http://localhost:8080/realms/gamestore",
+        "ClientSecret": "Z0sxK9kZb1romgACt3NKbUWQ7w57kpsR"
       }
     }
   }
